--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,10 +1,58 @@
+body {
+	font-family: Roboto;
+  background: -webkit-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* W3C */
+}
+h1{
+	background: #2980b9;
+	color:white;
+	margin: 0;
+	padding: 10px 20px;
+	text-transform: uppercase;
+	font-size: 24px;
+	font-weight: normal;
+}
+input{
+	font-size: 18px;
+	color:#2980b9;
+	background-color: #f7f7f7;
+	width: 100%;
+	padding: 13px 13px 13px 20px;
+	box-sizing: border-box;
+	border:3px solid rgba(0,0,0,0);
+}
+input:focus{
+	background: #fff;
+	border: 3px solid #e980b9;
+	outline:none;
+}
+ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+li{
+	background: #fff;
+	height: 40px;
+	line-height: 40px;
+	color:#666;
+}
+li:nth-child(2n){
+	background: #f7f7f7;
+}
 #container{
-	margin:0 auto;
+	margin:100px auto;
 	width: 360px;
-	background: olive;
-	border: 2px solid gray;
+	box-shadow: 0 0 3px rgba(0,0,0, 0.1);
+	background: #f7f7f7;
 }
 .completed{
 	color:gray;
 	text-decoration: line-through;
+}
+.fa-plus{
+	float: right;
 }
